debug.log
[2015-02-16 20:15:49 +0530] [40045] [INFO] Starting gunicorn 19.2.1
[2015-02-16 20:15:49 +0530] [40045] [INFO] Listening at: http://127.0.0.1:8000 (40045)
[2015-02-16 20:15:49 +0530] [40045] [INFO] Using worker: sync
[2015-02-16 20:15:49 +0530] [40048] [INFO] Booting worker with pid: 40048
[2015-02-16 20:16:02 +0530] [40048] [INFO] Worker exiting (pid: 40048)
[2015-02-16 20:16:02 +0530] [40045] [INFO] Handling signal: int
[2015-02-16 20:16:03 +0530] [40045] [INFO] Shutting down: Master
[2015-02-16 20:16:57 +0530] [40055] [INFO] Starting gunicorn 19.2.1
[2015-02-16 20:16:57 +0530] [40055] [INFO] Listening at: http://127.0.0.1:8000 (40055)
[2015-02-16 20:16:57 +0530] [40055] [INFO] Using worker: sync
[2015-02-16 20:16:57 +0530] [40058] [INFO] Booting worker with pid: 40058
[2015-02-16 20:16:57 +0530] [40058] [ERROR] Exception in worker process:
Traceback (most recent call last):
  File "/Users/evanwexler/explain/matloff/matloff/lib/python2.7/site-packages/gunicorn/arbiter.py", line 503, in spawn_worker
    worker.init_process()
  File "/Users/evanwexler/explain/matloff/matloff/lib/python2.7/site-packages/gunicorn/workers/base.py", line 116, in init_process
    self.wsgi = self.app.wsgi()
  File "/Users/evanwexler/explain/matloff/matloff/lib/python2.7/site-packages/gunicorn/app/base.py", line 67, in wsgi
    self.callable = self.load()
  File "/Users/evanwexler/explain/matloff/matloff/lib/python2.7/site-packages/gunicorn/app/wsgiapp.py", line 65, in load
    return self.load_wsgiapp()
  File "/Users/evanwexler/explain/matloff/matloff/lib/python2.7/site-packages/gunicorn/app/wsgiapp.py", line 52, in load_wsgiapp
    return util.import_app(self.app_uri)
  File "/Users/evanwexler/explain/matloff/matloff/lib/python2.7/site-packages/gunicorn/util.py", line 355, in import_app
    __import__(module)
  File "/Users/evanwexler/explain/matloff/main.py", line 2
    from flask-bootstrap import Bootstrap
              ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/Users/evanwexler/explain/matloff/matloff/lib/python2.7/site-packages/gunicorn/arbiter.py", line 503, in spawn_worker
    worker.init_process()
  File "/Users/evanwexler/explain/matloff/matloff/lib/python2.7/site-packages/gunicorn/workers/base.py", line 116, in init_process
    self.wsgi = self.app.wsgi()
  File "/Users/evanwexler/explain/matloff/matloff/lib/python2.7/site-packages/gunicorn/app/base.py", line 67, in wsgi
    self.callable = self.load()
  File "/Users/evanwexler/explain/matloff/matloff/lib/python2.7/site-packages/gunicorn/app/wsgiapp.py", line 65, in load
    return self.load_wsgiapp()
  File "/Users/evanwexler/explain/matloff/matloff/lib/python2.7/site-packages/gunicorn/app/wsgiapp.py", line 52, in load_wsgiapp
    return util.import_app(self.app_uri)
  File "/Users/evanwexler/explain/matloff/matloff/lib/python2.7/site-packages/gunicorn/util.py", line 355, in import_app
    __import__(module)
  File "/Users/evanwexler/explain/matloff/main.py", line 2
    from flask-bootstrap import Bootstrap
              ^
SyntaxError: invalid syntax
[2015-02-16 20:16:57 +0530] [40058] [INFO] Worker exiting (pid: 40058)
[2015-02-16 20:16:57 +0530] [40055] [INFO] Shutting down: Master
[2015-02-16 20:16:57 +0530] [40055] [INFO] Reason: Worker failed to boot.
[2015-02-16 20:17:37 +0530] [40068] [INFO] Starting gunicorn 19.2.1
[2015-02-16 20:17:37 +0530] [40068] [INFO] Listening at: http://127.0.0.1:8000 (40068)
[2015-02-16 20:17:37 +0530] [40068] [INFO] Using worker: sync
[2015-02-16 20:17:37 +0530] [40071] [INFO] Booting worker with pid: 40071
[2015-02-16 20:18:21 +0530] [40071] [INFO] Worker exiting (pid: 40071)
[2015-02-16 20:18:21 +0530] [40068] [INFO] Handling signal: int
[2015-02-16 20:18:22 +0530] [40068] [INFO] Shutting down: Master
